Added sponsor form to site

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="what mentors" id="apply">
     <div class="container">
         <h2>What are you waiting for?</h2>
-        <div class="mentorsBtn" k><a href="/apply.html" class="m80_r">Apply</a><a href="">Sponsor</a></div>
+        <div class="mentorsBtn" k><a href="/apply.html" class="m80_r">Apply</a><a href="/sponsor.html">Sponsor</a></div>
     </div>
     </div>
     <div class="faq" id="faq"> 
