change application form to Jin Shu Ju

--- a/cn/index.html
+++ b/cn/index.html
@@ -35,7 +35,7 @@
           <ul class="nav navbar-nav">
           <li class="active"><a href="#home" >主页</a></li>
           <!--            <li><a href="#mentors">Mentors</a></li> -->
-            <li><a href="#apply">申请</a></li>
+            <li><a href="https://www.jinshuju.net/f/gfQbKS">申请</a></li>
             <li><a href="#faq">FAQ</a></li>
             <!--            <li class="last"><a href="#sponsers">Sponsors</a></li> -->
           </ul>
