--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <ul class="nav navbar-nav">
           <li class="active"><a href="#home" >Home</a></li>
           <!--            <li><a href="#mentors">Mentors</a></li> -->
-            <li><a href="#apply">Apply</a></li>
+            <li><a href="https://www.jinshuju.net/f/gfQbKS">Apply</a></li>
             <li><a href="#faq">FAQ</a></li>
             <li><a href="cn/index.html">中文</a></li>
             <!--            <li class="last"><a href="#sponsers">Sponsors</a></li> -->
@@ -127,7 +127,7 @@
     </div>
     <div class="footer">
     <p>happy hacking :)</p>
-    <p>Contact THacks: thacks2014@gmail.com</p>
+    <p>Contact THacks: hi@thacks.org</p>
     <!-- 
     <img src="images/cover_83.png" alt="" />    
     <img src="images/cover_85.png" alt=""/>
