--- a/cn/index.html
+++ b/cn/index.html
@@ -74,7 +74,7 @@
     <div class="what mentors" id="apply">
     <div class="container">
         <h2>What are you waiting for?</h2>
-        <div class="mentorsBtn" k><a href="/apply.html" class="m80_r">申请</a><a href="">赞助我们</a></div>
+        <div class="mentorsBtn" k><a href="https://www.jinshuju.net/f/gfQbKS" class="m80_r">申请</a><a href="">赞助我们</a></div>
     </div>
     </div>
     <div class="faq" id="faq"> 
