--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     	<div><img src="images/cover_02.png" alt="" /></div>
         <div class="homePic"><img src="images/cover_06.png" alt=""   width="150"></div>
         <div class="homelogo"><img src="images/cover_10.png" alt="home logo"  width="700"/></div>
-        <div class="applyNowBtn"><a href="/apply.html"><img src="images/cover_18.png" alt="APPLY NOW" /></a></div>
+        <div class="applyNowBtn"><a href="https://www.jinshuju.net/f/gfQbKS"><img src="images/cover_18.png" alt="APPLY NOW" /></a></div>
         <div class="navbar" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
