--- a/cn/index.html
+++ b/cn/index.html
@@ -126,7 +126,7 @@
     </div>
     <div class="footer">
     <p>happy hacking :)</p>
-    <p>联系THacks: thacks2014@gmail.com</p>
+    <p>联系THacks: hi@thacks.org</p>
     <!-- 
     <img src="images/cover_83.png" alt="" />    
     <img src="images/cover_85.png" alt=""/>
