add sponsor images

--- a/index.html
+++ b/index.html
@@ -104,21 +104,21 @@
    
     <div class="sponsers" id="sponsers">
     <div class="container">
-    <!--
+    
     	<div class="sponsersLogo"><img src="images/cover_73.png" /></div>
         <div class="sponsers_pic">
-        <a href="#"><img src="images/sponser_09.png" alt="" /></a>
-        <a href="#"><img src="images/sponser_11.png" alt="" /></a>
-        <a href="#"><img src="images/sponser_13.png" alt="" /></a>
-        <a href="#"><img src="images/sponser_15.png" alt="" /></a>
-        <a href="#"><img src="images/sponser_18.png" alt="" /></a>
-        <a href="#"><img src="images/sponser_25.png" alt="" /></a>
+        <a href="#"><img src="images/sponsor_kimono.jpeg" alt="" /></a>
+        <a href="#"><img src="images/sponsor_upyun.jpeg" alt="" /></a>
+        <a href="#"><img src="images/sponsor_treehouse.png" alt="" /></a>
+        <a href="#"><img src="images/sponsor_toyhouse.jpeg" alt="" /></a>
+        <a href="#"><img src="images/sponsor_wanbo.jpeg" alt="" /></a>
+<!--         <a href="#"><img src="images/sponser_25.png" alt="" /></a>
         <a href="#"><img src="images/sponser_27.png" alt="" /></a>
         <a href="#"><img src="images/sponser_28.png" alt="" /></a>
         <a href="#"><img src="images/sponser_30.png" alt="" /></a>
-        <a href="#"><img src="images/sponser_32.png" alt="" /></a>
+        <a href="#"><img src="images/sponser_32.png" alt="" /></a> -->
         </div>
-    -->
+    
         <div class="sponsers_bottom">
         <a href="http://www.tsinghua.edu.cn/"><img src="images/sponser_02.png" alt="" /></a>
         <a href=""><img src="images/sponser_04.png" alt="" /></a>
