add sponsors and collaborators

--- a/cn/index.html
+++ b/cn/index.html
@@ -104,22 +104,40 @@
     <div class="sponsers" id="sponsers">
     <div class="container">
 
-    <div class="sponsersLogo"><img src="images/cover_73.png" /></div>
+      <div class="sponsersLogo"><img src="images/cover_73.png" /></div>
+        <div class="sponsers_pic">
             <div class="sponsers_pic">
-            <a href="#"><img src="images/sponsor_kimono.jpeg" alt="" /></a>
-            <a href="#"><img src="images/sponsor_upyun.jpeg" alt="" /></a>
-            <a href="#"><img src="images/sponsor_treehouse.png" alt="" /></a>
-            <a href="#"><img src="images/sponsor_toyhouse.jpeg" alt="" /></a>
-            <a href="#"><img src="images/sponsor_wanbo.jpeg" alt="" /></a>
+            <a href="https://www.kimonolabs.com/"><img src="images/sponsor_kimono.jpeg" alt="" /></a>
+            <a href="https://www.upyun.com/"><img src="images/sponsor_upyun.jpeg" alt="" /></a>
+            <a href="http://zhenfund.com/"><img src="images/sponsor_zhenfund.jpeg" alt="" /></a>
+            <a href="http://teamtreehouse.com/"><img src="images/sponsor_treehouse.png" alt="" /></a>
+            <a href="http://www.tsinghua.edu.cn/"><img src="images/sponser_02.png" alt="" /></a>
+            <!-- <a href="#"><img src="images/sponsor_toyhouse.jpeg" alt="" /></a> -->
+            <a href="http://www.changyou.com/index.shtml"><img src="images/sponsor_sohucy.jpg" alt="" /></a>
+            <a href="http://www.wnt.com.cn/"><img src="images/sponsor_wanbo.jpeg" alt="" /></a>
+            <a href="http://openwisdomlab.org/zh/p/%E6%B2%99%E9%BE%99/"><img src="images/sponsor_owl.jpg" alt="" /></a>
+            <a href="http://segmentfault.com/"><img src="images/sponsor_segfault.jpeg" alt="" /></a>
     <!--         <a href="#"><img src="images/sponser_25.png" alt="" /></a>
             <a href="#"><img src="images/sponser_27.png" alt="" /></a>
             <a href="#"><img src="images/sponser_28.png" alt="" /></a>
             <a href="#"><img src="images/sponser_30.png" alt="" /></a>
             <a href="#"><img src="images/sponser_32.png" alt="" /></a> -->
-      </div>
+        </div>
+    
+        <p style="color:white; font-size:30px; margin-top:50px;">Our Hackathon Collaborators</p>
+        <div class="sponsers_pic">
+            <div class="sponsers_pic">
+            <a href="http://www.csdn.net/"><img src="images/collaborator_csdn.jpg" alt="" /></a>
+            <a href="http://xiaojiangyou.com/"><img src="images/collaborator_xiaojiangyou.jpeg" alt="" /></a>
+            <a href="https://gitcafe.com/"><img src="images/collaborator_gitcafe.jpg" alt="" /></a>
+            <a href="http://toyhouse.cc/"><img src="images/collaborator_toyhouse.jpeg" alt="" /></a>
+            <a href="http://www.hackshanghai.com/"><img src="images/collaborator_hackshanghai.png" alt="" /></a>
+            <a href="http://huodongxing.com/"><img src="images/collaborator_hdx.png" alt="" /></a>
+            <a href="http://mhacks.org/"><img src="images/collaborator_mhacks.jpeg" alt="" /></a>
+            <a href="http://www.dreamore.com/"><img src="images/collaborator_dreamore.jpg" alt="" /></a>
+        </div>
 
         <div class="sponsers_bottom">
-        <a href="http://www.tsinghua.edu.cn/"><img src="images/sponser_02.png" alt="" /></a>
         <a href=""><img src="images/sponser_04.png" alt="" /></a>
         </div>
         </div>
