--- a/cn/index.html
+++ b/cn/index.html
@@ -122,9 +122,15 @@
             <a href="#"><img src="images/sponser_28.png" alt="" /></a>
             <a href="#"><img src="images/sponser_30.png" alt="" /></a>
             <a href="#"><img src="images/sponser_32.png" alt="" /></a> -->
+          </div>
         </div>
-    
-        <p style="color:white; font-size:30px; margin-top:50px;">Our Hackathon Collaborators</p>
+      </div>
+    </div>
+
+    <div class="sponsers" id="sponsers">
+    <div class="container">
+      <!-- <div class="sponsersLogo"><img src="images/cover_74.png" /></div> -->
+        <p style="color:white; text-align:center; font-size:30px; margin-top:50px;">THacks的协助单位</p>
         <div class="sponsers_pic">
             <div class="sponsers_pic">
             <a href="http://www.csdn.net/"><img src="images/collaborator_csdn.jpg" alt="" /></a>
@@ -135,20 +141,22 @@
             <a href="http://huodongxing.com/"><img src="images/collaborator_hdx.png" alt="" /></a>
             <a href="http://mhacks.org/"><img src="images/collaborator_mhacks.jpeg" alt="" /></a>
             <a href="http://www.dreamore.com/"><img src="images/collaborator_dreamore.jpg" alt="" /></a>
+          </div>
         </div>
 
         <div class="sponsers_bottom">
         <a href=""><img src="images/sponser_04.png" alt="" /></a>
         </div>
-        </div>
+      </div>
     </div>
+
     <div class="footer">
     <p>happy hacking :)</p>
     <p>联系THacks: hi@thacks.org</p>
     <!-- 
     <img src="images/cover_83.png" alt="" />    
-    <img src="images/cover_85.png" alt=""/>
-    <img src="images/cover_87.png" alt=""/>
+    <img src="images/cover_85.png" alt="" />
+    <img src="images/cover_87.png" alt="" />
     -->
     </div>
     
