--- a/cn/index.html
+++ b/cn/index.html
@@ -153,6 +153,8 @@
     <div class="footer">
     <p>happy hacking :)</p>
     <p>联系THacks: hi@thacks.org</p>
+    <p>新浪微博: http://www.weibo.com/u/5344920097 黑客松中国</p>
+    <p>微信公众平台: ChinaHackathon</p>
     <!-- 
     <img src="images/cover_83.png" alt="" />    
     <img src="images/cover_85.png" alt="" />
