--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <div class="footer">
     <p>happy hacking :)</p>
     <p>Contact THacks: hi@thacks.org</p>
-    <p>Sina Weibo: http://www.weibo.com/u/5344920097 黑客松中国</p>
+    <p>Sina Weibo: http://www.weibo.com/u/5344920097</p>
     <p>Wechat public platform: ChinaHackathon</p>
     <!-- 
     <img src="images/cover_83.png" alt="" />    
