add CHAIN to collaborator

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
             <a href="https://gitcafe.com/"><img src="images/collaborator_gitcafe.jpg" alt="" /></a>
             <a href="http://toyhouse.cc/"><img src="images/collaborator_toyhouse.jpeg" alt="" /></a>
             <a href="http://www.hackshanghai.com/"><img src="images/collaborator_hackshanghai.png" alt="" /></a>
+            <a href="http://www.innovationchain.org/"><img src="images/collaborator_chain.jpg" alt="" /></a>
             <a href="http://huodongxing.com/"><img src="images/collaborator_hdx.png" alt="" /></a>
             <a href="http://mhacks.org/"><img src="images/collaborator_mhacks.jpeg" alt="" /></a>
             <a href="http://www.dreamore.com/"><img src="images/collaborator_dreamore.jpg" alt="" /></a>
