add wechat and weibo

--- a/cn/index.html
+++ b/cn/index.html
@@ -139,6 +139,7 @@
             <a href="http://toyhouse.cc/"><img src="images/collaborator_toyhouse.jpeg" alt="" /></a>
             <a href="http://www.hackshanghai.com/"><img src="images/collaborator_hackshanghai.png" alt="" /></a>
             <a href="http://www.innovationchain.org/"><img src="images/collaborator_chain.jpg" alt="" /></a>
+            <a href="#"><img src="images/collaborator_xsjy.jpeg" alt="" /></a>
             <a href="http://huodongxing.com/"><img src="images/collaborator_hdx.png" alt="" /></a>
             <a href="http://mhacks.org/"><img src="images/collaborator_mhacks.jpeg" alt="" /></a>
             <a href="http://www.dreamore.com/"><img src="images/collaborator_dreamore.jpg" alt="" /></a>
@@ -154,8 +155,8 @@
     <div class="footer">
     <p>happy hacking :)</p>
     <p>联系THacks: hi@thacks.org</p>
-    <p>新浪微博: http://www.weibo.com/u/5344920097 黑客松中国</p>
-    <p>微信公众平台: ChinaHackathon</p>
+    <p>新浪微博: http://www.weibo.com/u/5344920097</p>
+    <p>微信公众平台: THacks</p>
     <!-- 
     <img src="images/cover_83.png" alt="" />    
     <img src="images/cover_85.png" alt="" />
