--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
             <a href="http://toyhouse.cc/"><img src="images/collaborator_toyhouse.jpeg" alt="" /></a>
             <a href="http://www.hackshanghai.com/"><img src="images/collaborator_hackshanghai.png" alt="" /></a>
             <a href="http://www.innovationchain.org/"><img src="images/collaborator_chain.jpg" alt="" /></a>
+            <a href="#"><img src="images/collaborator_xsjy.jpeg" alt="" /></a>
             <a href="http://huodongxing.com/"><img src="images/collaborator_hdx.png" alt="" /></a>
             <a href="http://mhacks.org/"><img src="images/collaborator_mhacks.jpeg" alt="" /></a>
             <a href="http://www.dreamore.com/"><img src="images/collaborator_dreamore.jpg" alt="" /></a>
@@ -149,7 +150,7 @@
     <p>happy hacking :)</p>
     <p>Contact THacks: hi@thacks.org</p>
     <p>Sina Weibo: http://www.weibo.com/u/5344920097</p>
-    <p>Wechat public platform: ChinaHackathon</p>
+    <p>Wechat public platform: THacks</p>
     <!-- 
     <img src="images/cover_83.png" alt="" />    
     <img src="images/cover_85.png" alt=""/>
