--- a/cn/index.html
+++ b/cn/index.html
@@ -117,6 +117,7 @@
             <a href="http://www.wnt.com.cn/"><img src="images/sponsor_wanbo.jpeg" alt="" /></a>
             <a href="http://openwisdomlab.org/zh/p/%E6%B2%99%E9%BE%99/"><img src="images/sponsor_owl.jpg" alt="" /></a>
             <a href="http://segmentfault.com/"><img src="images/sponsor_segfault.jpeg" alt="" /></a>
+            <a href="http://www.wolframalpha.com/"><img src="images/sponsor_worlfram.jpeg" alt="" /></a>
     <!--         <a href="#"><img src="images/sponser_25.png" alt="" /></a>
             <a href="#"><img src="images/sponser_27.png" alt="" /></a>
             <a href="#"><img src="images/sponser_28.png" alt="" /></a>
@@ -156,7 +157,8 @@
     <p>happy hacking :)</p>
     <p>联系THacks: hi@thacks.org</p>
     <p>新浪微博: http://www.weibo.com/u/5344920097</p>
-    <p>微信公众平台: THacks</p>
+    <p>Thack微信公众平台: THacks</p>
+    <p>黑客松中国微信公众平台: chinahackathon</p>
     <!-- 
     <img src="images/cover_83.png" alt="" />    
     <img src="images/cover_85.png" alt="" />
