--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
             <a href="http://www.wnt.com.cn/"><img src="images/sponsor_wanbo.jpeg" alt="" /></a>
             <a href="http://openwisdomlab.org/zh/p/%E6%B2%99%E9%BE%99/"><img src="images/sponsor_owl.jpg" alt="" /></a>
             <a href="http://segmentfault.com/"><img src="images/sponsor_segfault.jpeg" alt="" /></a>
+            <a href="http://www.wolframalpha.com/"><img src="images/sponsor_worlfram.jpeg" alt="" /></a>
     <!--         <a href="#"><img src="images/sponser_25.png" alt="" /></a>
             <a href="#"><img src="images/sponser_27.png" alt="" /></a>
             <a href="#"><img src="images/sponser_28.png" alt="" /></a>
@@ -150,7 +151,8 @@
     <p>happy hacking :)</p>
     <p>Contact THacks: hi@thacks.org</p>
     <p>Sina Weibo: http://www.weibo.com/u/5344920097</p>
-    <p>Wechat public platform: THacks</p>
+    <p>Thack Wechat public platform: THacks</p>
+    <p>China hackathon Wechat public platform: chinahackathon</p>
     <!-- 
     <img src="images/cover_83.png" alt="" />    
     <img src="images/cover_85.png" alt=""/>
