--- a/cn/index.html
+++ b/cn/index.html
@@ -117,7 +117,9 @@
             <a href="http://www.wnt.com.cn/"><img src="images/sponsor_wanbo.jpeg" alt="" /></a>
             <a href="http://openwisdomlab.org/zh/p/%E6%B2%99%E9%BE%99/"><img src="images/sponsor_owl.jpg" alt="" /></a>
             <a href="http://segmentfault.com/"><img src="images/sponsor_segfault.jpeg" alt="" /></a>
-            <a href="http://www.wolframalpha.com/"><img src="images/sponsor_worlfram.jpeg" alt="" /></a>
+            <a href="http://www.wolframalpha.com/"><img src="images/wolframlogo.jpg" alt="" /></a>
+            <a href="http://www.digitalocean.com/"><img src="images/digitaloceanlogo.jpg" alt="" /></a>
+            <a href="http://www.amazon.com/"><img src="images/amazonlogo.jpg" alt="" /></a>
     <!--         <a href="#"><img src="images/sponser_25.png" alt="" /></a>
             <a href="#"><img src="images/sponser_27.png" alt="" /></a>
             <a href="#"><img src="images/sponser_28.png" alt="" /></a>
