--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@
             <a href="http://www.wolframalpha.com/"><img src="images/wolframlogo.jpg" alt="" /></a>
             <a href="http://www.digitalocean.com/"><img src="images/digitaloceanlogo.png" alt="" /></a>
             <a href="http://www.amazon.com/"><img src="images/amazonlogo.jpg" alt="" /></a>
+            <a href="http://www.facebook.com/"><img src="images/facebook.jpg" alt="" /></a>
+            <a href="https://www.getpebble.com"><img src="images/pebble.png" alt="" /></a>
     <!--         <a href="#"><img src="images/sponser_25.png" alt="" /></a>
             <a href="#"><img src="images/sponser_27.png" alt="" /></a>
             <a href="#"><img src="images/sponser_28.png" alt="" /></a>
