--- a/cn/index.html
+++ b/cn/index.html
@@ -122,6 +122,7 @@
             <a href="http://www.amazon.com/"><img src="images/amazonlogo.jpg" alt="" /></a>
             <a href="http://www.facebook.com/"><img src="images/facebook.jpg" alt="" /></a>
             <a href="https://www.getpebble.com"><img src="images/pebble.png" alt="" /></a>
+            <a href="http://www.cofinancegroup.com"><img src="images/COF.png" alt="" /></a>
     <!--         <a href="#"><img src="images/sponser_25.png" alt="" /></a>
             <a href="#"><img src="images/sponser_27.png" alt="" /></a>
             <a href="#"><img src="images/sponser_28.png" alt="" /></a>
