changed sponsors to tshirt design

--- a/index.html
+++ b/index.html
@@ -105,52 +105,32 @@
     <div class="sponsers" id="sponsers">
     <div class="container">
     
-    	<div class="sponsersLogo"><img src="images/cover_73.png" /></div>
-        <div class="sponsers_pic">
-            <div class="sponsers_pic">
-            <a href="https://www.kimonolabs.com/"><img src="images/sponsor_kimono.jpeg" alt="" /></a>
-            <a href="https://www.upyun.com/"><img src="images/sponsor_upyun.jpeg" alt="" /></a>
-            <a href="http://zhenfund.com/"><img src="images/sponsor_zhenfund.jpeg" alt="" /></a>
-            <a href="http://teamtreehouse.com/"><img src="images/sponsor_treehouse.png" alt="" /></a>
-            <a href="http://www.tsinghua.edu.cn/"><img src="images/sponser_02.png" alt="" /></a>
-            <!-- <a href="#"><img src="images/sponsor_toyhouse.jpeg" alt="" /></a> -->
-            <a href="http://www.changyou.com/index.shtml"><img src="images/sponsor_sohucy.jpg" alt="" /></a>
-            <a href="http://www.wnt.com.cn/"><img src="images/sponsor_wanbo.jpeg" alt="" /></a>
-            <a href="http://openwisdomlab.org/zh/p/%E6%B2%99%E9%BE%99/"><img src="images/sponsor_owl.jpg" alt="" /></a>
-            <a href="http://segmentfault.com/"><img src="images/sponsor_segfault.jpeg" alt="" /></a>
-            <a href="http://www.wolframalpha.com/"><img src="images/wolframlogo.jpg" alt="" /></a>
-            <a href="http://www.digitalocean.com/"><img src="images/digitaloceanlogo.png" alt="" /></a>
-            <a href="http://www.amazon.com/"><img src="images/amazonlogo.jpg" alt="" /></a>
-            <a href="http://www.facebook.com/"><img src="images/facebook.jpg" alt="" /></a>
-            <a href="https://www.getpebble.com"><img src="images/pebble.png" alt="" /></a>
-            <a href="http://www.cofinancegroup.com"><img src="images/COF.png" alt="" /></a>
-    <!--         <a href="#"><img src="images/sponser_25.png" alt="" /></a>
-            <a href="#"><img src="images/sponser_27.png" alt="" /></a>
-            <a href="#"><img src="images/sponser_28.png" alt="" /></a>
-            <a href="#"><img src="images/sponser_30.png" alt="" /></a>
-            <a href="#"><img src="images/sponser_32.png" alt="" /></a> -->
-        </div>
-    
-        <p style="color:white; font-size:30px; margin-top:50px;">Our Hackathon Collaborators</p>
-        <div class="sponsers_pic">
-            <div class="sponsers_pic">
-            <a href="http://www.csdn.net/"><img src="images/collaborator_csdn.jpg" alt="" /></a>
-            <a href="http://xiaojiangyou.com/"><img src="images/collaborator_xiaojiangyou.jpeg" alt="" /></a>
-            <a href="https://gitcafe.com/"><img src="images/collaborator_gitcafe.jpg" alt="" /></a>
-            <a href="http://toyhouse.cc/"><img src="images/collaborator_toyhouse.jpeg" alt="" /></a>
-            <a href="http://www.hackshanghai.com/"><img src="images/collaborator_hackshanghai.png" alt="" /></a>
-            <a href="http://www.innovationchain.org/"><img src="images/collaborator_chain.jpg" alt="" /></a>
-            <a href="#"><img src="images/collaborator_xsjy.jpeg" alt="" /></a>
-            <a href="http://huodongxing.com/"><img src="images/collaborator_hdx.png" alt="" /></a>
-            <a href="http://mhacks.org/"><img src="images/collaborator_mhacks.jpeg" alt="" /></a>
-            <a href="http://www.dreamore.com/"><img src="images/collaborator_dreamore.jpg" alt="" /></a>
-        </div>
-
-        <div class="sponsers_bottom">
-        <!-- <a href="http://www.tsinghua.edu.cn/"><img src="images/sponser_02.png" alt="" /></a> -->
-        <a href="#"><img src="images/sponser_04.png" alt="" /></a>
-        </div>
-        </div>
+    <div class="sponsor-image" >
+        <img src="images/thacks-sponsors.png" border="0" width="970" height="853" orgWidth="970" orgHeight="853" usemap="#sponsor-image-map" alt="" style="display: block; margin-left: auto; margin-right: auto;"/>
+        <map name="sponsor-image-map">
+            <area  alt="" title="" href="http://www.cofinancegroup.com/" shape="rect" coords="528,0,881,193" style="outline:none;" target="_self"     />
+            <area  alt="" title="" href="http://toyhouse.cc/" shape="rect" coords="415,203,970,339" style="outline:none;" target="_self"     />
+            <area  alt="" title="" href="http://www.tsinghua.edu.cn/" shape="rect" coords="36,0,485,188" style="outline:none;" target="_self"     />
+            <area  alt="" title="" href="http://zhenfund.com/" shape="rect" coords="0,221,378,336" style="outline:none;" target="_self"     />
+            <area  alt="" title="" href="http://www.hackshanghai.com" shape="rect" coords="0,478,233,539" style="outline:none;" target="_self"     />
+            <area  alt="" title="" href="https://www.getpebble.com/" shape="rect" coords="272,479,479,540" style="outline:none;" target="_self"     />
+            <area  alt="" title="" href="http://www.facebook.com/" shape="rect" coords="517,475,735,536" style="outline:none;" target="_self"     />
+            <area  alt="" title="" href="http://www.amazon.com" shape="rect" coords="769,485,970,556" style="outline:none;" target="_self"     />
+            <area  alt="" title="" href="https://gitcafe.com/" shape="rect" coords="780,567,957,680" style="outline:none;" target="_self"     />
+            <area  alt="" title="" href="http://www.wolframalpha.com" shape="rect" coords="580,553,774,682" style="outline:none;" target="_self"     />
+            <area  alt="" title="" href="https://www.kimonolabs.com/" shape="rect" coords="447,560,549,689" style="outline:none;" target="_self"     />
+            <area  alt="" title="" href="http://mhacks.org" shape="rect" coords="303,558,427,687" style="outline:none;" target="_self"     />
+            <area  alt="" title="" href="https://www.upyun.com/" shape="rect" coords="162,564,286,693" style="outline:none;" target="_self"     />
+            <area  alt="" title="" href="http://www.innovationchain.org/" shape="rect" coords="8,585,128,682" style="outline:none;" target="_self"     />
+            <area  alt="" title="" href="http://teamtreehouse.com/" shape="rect" coords="124,724,248,836" style="outline:none;" target="_self"     />
+            <area  alt="" title="" href="http://www.changyou.com/index.shtml" shape="rect" coords="279,698,378,853" style="outline:none;" target="_self"     />
+            <area  alt="" title="" href="http://www.digitalocean.com" shape="rect" coords="414,721,576,832" style="outline:none;" target="_self"     />
+            <area  alt="" title="" href="http://www.thacks.org" shape="rect" coords="595,709,849,837" style="outline:none;" target="_self"     />
+            <area  alt="" title="" href="http://www.thacks.org" shape="rect" coords="457,366,960,452" style="outline:none;" target="_self"     />
+            <area  alt="" title="" href="http://www.thacks.org" shape="rect" coords="0,349,417,479" style="outline:none;" target="_self"     />
+        </map>
+    </div>
+    </div>
     </div>
     <div class="footer">
     <p>happy hacking :)</p>
